# ClearanceField

./: .gitignore  CMakeLists.txt  LICENSE-BSD3.txt  README.md  brushfire_clearen_field.hpp  clearance_field.cpp  clearance_field.hpp  clearance_field_impl_brushfire.hpp  clearance_field_impl_true.cpp  clearance_field_interface.hpp  true_clearance_field.cpp  true_clearance_field.hpp
Examples/: .gitignore
Examples/TrueClearance/: CMakeLists.txt  Makefile  main.cpp
Source/: CMakeLists.txt  ClearanceField.h
Tests/: BrushfireSimpleBoundTest.cpp  BrushfireSimpleTest.cpp  TrueClearanceSimpleBoundTest.cpp  TrueClearanceSimpleTest.cpp
Visualizer/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  Makefile  main.cpp
examples/true-clearance/: CMakeLists.txt  Makefile  README.md  main.cpp
impls/: brushfire_clearance_field.hpp  true_clearance_field.cpp  true_clearance_field.hpp
tests/: CMakeLists.txt  brushfire_simple_bound_test.cpp  brushfire_simple_test.cpp  helper.hpp  simple_bound_test.cpp  simple_test.cpp  true_clearance_simple_bound_test.cpp  true_clearance_simple_test.cpp
visualizer/: CMakeLists.txt  conanfile.txt  main.cpp
